added google maps place details to our event models
